# ros2-course

auv final/: README.md
cmake-tut2/: CMakeCache.txt  CMakeLists.txt  Makefile
cpp_parameters/: CMakeLists.txt  package.xml
cpp_parameters/src/: cpp_parameters_node.cpp
cpp_pubsub/: CMakeLists.txt  package.xml
cpp_pubsub/src/: subscriber_member_function.cpp
cpp_srvcli/: CMakeLists.txt  package.xml
createpkg/: CMakeLists.txt  package.xml
createpkg/launch/: createpkg_launch.py
findgate/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  package.xml
findgate/ament_cmake_core/: package.cmake
findgate/ament_cmake_core/stamps/: package.xml.stamp
findgate/ament_cmake_package_templates/: templates.cmake
findgate/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
findgate/install/: local_setup.sh  setup.bash  setup.sh
findgate/log/: latest_build
findgate/src/: gateserv.cpp
findgate/src/interfaces/: interface.srv
gateclnt/: package.xml  setup.cfg  setup.py
gateclnt/gateclnt/: gateclient.py
gatesrv/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  package.xml
gatesrv/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
gatesrv/src/: gateserv.cpp
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
log/: latest_build
more_interfaces/: CMakeLists.txt  package.xml
more_interfaces/src/: publish_address_book.cpp
my_package/: package.xml
py_pubsub/: package.xml  setup.py
tutorial_interfaces/: CMakeLists.txt  package.xml
tutorial_interfaces/cmake-tut2/: CMakeCache.txt  Makefile  cmake-tut2  cmake_install.cmake  main.cpp
tutorial_interfaces/cmake-tut2/hdr/: mylib.hpp
tutorial_interfaces/cmake-tut2/src/: mylib.cpp
